--- a/src/components/Column/Column.module.scss
+++ b/src/components/Column/Column.module.scss
@@ -5,6 +5,7 @@
     flex-direction: column;
     margin-left: 24px;
     margin-top: 40px;
+    width: 300px;
     .title {
         font-size: 12px;
         line-height: 15px;
