--- a/src/components/Task/Task.module.scss
+++ b/src/components/Task/Task.module.scss
@@ -18,7 +18,7 @@
     border-radius: 8px;
     padding: 23px 16px;
     width: 300px;
-    height: 95px;
+    height: fit-content;
     word-wrap: break-word;
     margin-bottom: 20px;
     cursor: pointer;
