--- a/src/components/Modals/AddTaskModal/AddModalTask.module.scss
+++ b/src/components/Modals/AddTaskModal/AddModalTask.module.scss
@@ -84,7 +84,7 @@
 
 @media(max-width:500px) {
     .modal_content {
-        max-width: 100%;
+        width: 320px;
         padding: 20px 10px;
         .input_wrapper {
             .input {
