--- a/src/components/Modals/DeleteTaskModal/DeleteTaskModal.module.scss
+++ b/src/components/Modals/DeleteTaskModal/DeleteTaskModal.module.scss
@@ -46,7 +46,7 @@
 
 @media(max-width:500px) {
     .modal_content {
-        max-width: 100%;
+        width: 320px;
         padding: 20px 10px;
        
     }
