--- a/src/components/Modals/EditBoardModal/EditBoardModal.module.scss
+++ b/src/components/Modals/EditBoardModal/EditBoardModal.module.scss
@@ -82,7 +82,7 @@
 
 @media(max-width:500px) {
     .modal_content {
-        max-width: 100%;
+        width: 320px;
         padding: 20px 10px;
         .input_wrapper {
             .input {
