--- a/src/components/Modals/AddColumn/AddColumn.module.scss
+++ b/src/components/Modals/AddColumn/AddColumn.module.scss
@@ -83,7 +83,7 @@
 
 @media(max-width:500px) {
     .modal_content {
-        max-width: 100%;
+        width: 320px;
         padding: 20px 10px;
         .input_wrapper {
             .input {
@@ -94,7 +94,7 @@
                
             }
             .error_text {
-               
+                text-align: right;
                 font-size: 10px;
 
             }
